fix library is not loaded

--- a/01_Discrete_Choice/KT_2024_discretechoice.Rmd
+++ b/01_Discrete_Choice/KT_2024_discretechoice.Rmd
@@ -23,6 +23,7 @@ library("magrittr")
 library("mlogit") # ロジットモデル推定のためのパッケージ
 library("stargazer")# 推定結果の表作成
 library("kableExtra")
+library("optimx")
 ```
 
 # データの整理
