--- a/01_Discrete_Choice/KT_2024_discretechoice.Rmd
+++ b/01_Discrete_Choice/KT_2024_discretechoice.Rmd
@@ -486,7 +486,11 @@ ggtitle("Revenue Curve of Kinoko when Takenoko's price = JPY 200")
 plot(fig_rev)
 ggsave(filename = "output/Revenue_Kinoko.pdf", plot = fig_rev, width = 8, height = 6)
 ```
+ 
+# スクラッチで推定 
  以下では、ロジット、消費者属性を考慮したロジット、ランダム係数ロジットモデルを、それぞれスクラッチで推定する。手始めにロジットモデルを推定する。
+## ロジットモデル
+　尤度関数は以下で定義する。
 ```{r}
 # 尤度関数
 
@@ -520,6 +524,7 @@ f_likelihood_logit <- function(param, data){
 
 }
 ```
+　初期値を与えて最適化を行う。
 ```{r}
 # 初期パラメタ
 ini <- c(5,5, -0.01)
@@ -535,7 +540,7 @@ result <- optimx( par = ini,
 # 推定値の取得
 est_vec <- as.numeric(result[1,1:3])
 ```
-
+　ヘシアンから標準誤差を得る。
 ```{r}
 #　ヘシアンの計算
 Hessian <- gHgen(par = as.numeric(result[1,1:3]), 
@@ -543,11 +548,13 @@ Hessian <- gHgen(par = as.numeric(result[1,1:3]),
                  data = data_for_estimation)
 se_vec <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
 ```
-以下がスクラッチで求めたロジットモデルの解である。上記のmlogitで求めた値とほとんど同じである。
+　以下がスクラッチで求めたロジットモデルの解である。上記のmlogitで求めた値とほとんど同じである。
 ```{r}
 print(rbind(est_vec, se_vec))
 ```
+## ロジットモデル(消費者属性入り)
 　次に、消費者属性を考慮したロジットモデルを推定する。初めに推定したロジットでは消費者間での属性による選択確率の差異がなかったが、今回はそれを許す。
+　はじめに、扱いやすくするためにデータの一部変数をダミー変数に直しておく。
 ```{r}
 # ダミー変数に直す
 data_for_estimation_with_atr <- data_for_estimation %>%
@@ -562,14 +569,12 @@ data_for_estimation_with_atr <- data_for_estimation %>%
 ```
 　方針:各選択フェーズでの選択確率を予測する際に、通常のロジットでは個人間の属性の差異を考慮しなかったので実質的には単に5設問分の選択確率を算出するだけで済んだが、消費者属性を含める場合は236人×5フェーズぶんを算出する必要がある。まず、f_logit_probの中身を書き換える。
 ```{r}
-# ある個人についての選択確率の算出用の関数
-# 上のほうで需要関数推定のときに実施した選択確率の算出時は、alpha_Kinokoなどの効用部分にあらかじめ消費者属性を入れていたことに注意。
-# 関数はこれで合っているか？
-f_logit_prob_with_atr <- function(alpha_Kinoko, alpha_Takenoko, beta, price_Kinoko, price_Takenoko, pi_gender_Kinoko, pi_gender_Takenoko, pi_familyhouse_Kinoko, pi_familyhouse_Takenoko, pi_adult_Kinoko, pi_adult_Takenoko, pi_regionKansai_Kinoko, pi_regionKansai_Takenoko, pi_regionOversea_Kinoko, pi_regionOversea_Takenoko, pi_gender_price, pi_familyhouse_price, pi_adult_price, pi_regionKansai_price, pi_regionOversea_price, gender, familyhouse, adult, kansai, oversea){
+
+f_logit_prob_with_atr <- function(alpha_Kinoko, alpha_Takenoko, beta, price_Kinoko, price_Takenoko, param_atr_Kinoko,param_atr_Takenoko, param_atr_price,atr){
 # きのこ、たけのこから得られるそれぞれの効用の算出
-# (pi_「消費者属性」がきのこ、たけのこへの属性ごとの反応の違い、pi_「消費者属性」_priceが価格への属性ごとの反応の違いを捉える)
-  util_Kinoko <- alpha_Kinoko + pi_gender_Kinoko*gender + pi_familyhouse_Kinoko*familyhouse +  pi_adult_Kinoko*adult + pi_regionKansai_Kinoko*kansai + pi_regionOversea_Kinoko*oversea - price_Kinoko*(beta + pi_gender_price*gender + pi_familyhouse_price*familyhouse + pi_adult_price*adult + pi_regionKansai_price*kansai + pi_regionOversea_price*oversea)
-  util_Takenoko <- alpha_Takenoko + pi_gender_Takenoko*gender + pi_familyhouse_Takenoko*familyhouse + pi_adult_Takenoko*adult + pi_regionKansai_Takenoko*kansai + pi_regionOversea_Takenoko*oversea - price_Takenoko*(beta+pi_gender_price*gender + pi_familyhouse_price*familyhouse +  pi_adult_price*adult + pi_regionKansai_price*kansai + pi_regionOversea_price*oversea)
+# (param_atr_〇〇が各属性との交差項の係数のベクトル、atrが消費者属性のベクトル)
+  util_Kinoko <- alpha_Kinoko + sum(param_atr_Kinoko*atr) - price_Kinoko*(beta +  sum(param_atr_price*atr))
+  util_Takenoko <- alpha_Takenoko + sum(param_atr_Takenoko*atr) - price_Takenoko*(beta +  sum(param_atr_price*atr))
 # 選択確率の算出
   prob_Kinoko <- exp( util_Kinoko ) / ( 1 + exp( util_Kinoko ) + exp( util_Takenoko ))
   prob_Takenoko <- exp( util_Takenoko ) / ( 1 + exp( util_Kinoko ) + exp( util_Takenoko ))
@@ -579,31 +584,21 @@ f_logit_prob_with_atr <- function(alpha_Kinoko, alpha_Takenoko, beta, price_Kino
 }
 ```
 
-
+　以下で尤度関数を定義する。
 ```{r}
 f_likelihood_logit_with_atr <- function(param, data){
   # 空のデータフレーム
   pred <- data.frame(matrix(ncol = 3, nrow = 1180))
   colnames(pred) <- c("prob_Kinoko", "prob_Takenoko","prob_Other")
   ID <- numeric(236)
-  alpha_Kinoko <- param[1]
-  alpha_Takenoko <- param[2]
-  beta   <- param[3]
-  pi_gender_Kinoko <- param[4]
-  pi_gender_Takenoko <- param[5]  
-  pi_familyhouse_Kinoko <- param[6]
-  pi_familyhouse_Takenoko<- param[7]
-  pi_adult_Kinoko <- param[8]
-  pi_adult_Takenoko <- param[9] 
-  pi_regionKansai_Kinoko <- param[10]
-  pi_regionKansai_Takenoko <- param[11]
-  pi_regionOversea_Kinoko <- param[12]
-  pi_regionOversea_Takenoko <- param[13] 
-  pi_gender_price <- param[14]
-  pi_familyhouse_price <- param[15]
-  pi_adult_price <- param[16]
-  pi_regionKansai_price <- param[17]
-  pi_regionOversea_price <- param[18]
+  atr <- numeric(5)
+  beta <- param[1]
+  alpha_Kinoko <- param[2]
+  alpha_Takenoko <- param[3]
+  param_atr_Kinoko <- param[c(6, 9, 12, 17, 18)]
+  param_atr_Takenoko <- param[c(5, 8, 11, 15, 16)]
+  param_atr_price <- param[c(4, 7, 10, 13, 14)]
+
 # 各回答者の選択確率を予測する
   for(i in 1:236){
     # 消費者属性を取得
@@ -612,12 +607,13 @@ f_likelihood_logit_with_atr <- function(param, data){
   adult <- data$adult[(5*(i-1)+1)]
   kansai <- data$kansai[(5*(i-1)+1)]
   oversea <- data$oversea[(5*(i-1)+1)]
+  atr[1:5] <- c(gender, familyhouse, adult, kansai, oversea)
 # 各選択フェーズでの選択確率を予測
-  P1 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 200, 200, pi_gender_Kinoko, pi_gender_Takenoko, pi_familyhouse_Kinoko, pi_familyhouse_Takenoko, pi_adult_Kinoko, pi_adult_Takenoko, pi_regionKansai_Kinoko, pi_regionKansai_Takenoko, pi_regionOversea_Kinoko, pi_regionOversea_Takenoko, pi_gender_price, pi_familyhouse_price, pi_adult_price, pi_regionKansai_price, pi_regionOversea_price, gender, familyhouse, adult, kansai, oversea)
-  P2 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 180, 200, pi_gender_Kinoko, pi_gender_Takenoko, pi_familyhouse_Kinoko, pi_familyhouse_Takenoko, pi_adult_Kinoko, pi_adult_Takenoko, pi_regionKansai_Kinoko, pi_regionKansai_Takenoko, pi_regionOversea_Kinoko, pi_regionOversea_Takenoko, pi_gender_price, pi_familyhouse_price, pi_adult_price, pi_regionKansai_price, pi_regionOversea_price, gender, familyhouse, adult, kansai, oversea)
-  P3 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 200, 170, pi_gender_Kinoko, pi_gender_Takenoko, pi_familyhouse_Kinoko, pi_familyhouse_Takenoko, pi_adult_Kinoko, pi_adult_Takenoko, pi_regionKansai_Kinoko, pi_regionKansai_Takenoko, pi_regionOversea_Kinoko, pi_regionOversea_Takenoko, pi_gender_price, pi_familyhouse_price, pi_adult_price, pi_regionKansai_price, pi_regionOversea_price, gender, familyhouse, adult, kansai, oversea)
-  P4 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 220, 200, pi_gender_Kinoko, pi_gender_Takenoko, pi_familyhouse_Kinoko, pi_familyhouse_Takenoko, pi_adult_Kinoko, pi_adult_Takenoko, pi_regionKansai_Kinoko, pi_regionKansai_Takenoko, pi_regionOversea_Kinoko, pi_regionOversea_Takenoko, pi_gender_price, pi_familyhouse_price, pi_adult_price, pi_regionKansai_price, pi_regionOversea_price, gender, familyhouse, adult, kansai, oversea)
-  P5 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 190, 210, pi_gender_Kinoko, pi_gender_Takenoko, pi_familyhouse_Kinoko, pi_familyhouse_Takenoko, pi_adult_Kinoko, pi_adult_Takenoko, pi_regionKansai_Kinoko, pi_regionKansai_Takenoko, pi_regionOversea_Kinoko, pi_regionOversea_Takenoko, pi_gender_price, pi_familyhouse_price, pi_adult_price, pi_regionKansai_price, pi_regionOversea_price, gender, familyhouse, adult, kansai, oversea)
+  P1 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 200, 200, param_atr_Kinoko,param_atr_Takenoko, param_atr_price,atr)
+  P2 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 180, 200, param_atr_Kinoko,param_atr_Takenoko, param_atr_price,atr)
+  P3 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 200, 170, param_atr_Kinoko,param_atr_Takenoko, param_atr_price,atr)
+  P4 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 220, 200, param_atr_Kinoko,param_atr_Takenoko, param_atr_price,atr)
+  P5 <- f_logit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 190, 210, param_atr_Kinoko,param_atr_Takenoko, param_atr_price,atr)
   # 格納
   pred[(5*(i-1)+1),] <- P1
   pred[(5*(i-1)+2),] <- P2
@@ -644,64 +640,51 @@ f_likelihood_logit_with_atr <- function(param, data){
   return(likelihood)
 
 }
+
 ```
 
-
+ 初期値を与えて最適化を行う。
 ```{r}
 # 初期パラメタ
 # おおざっぱに決めた初期値
-ini <- c(5, 5, 0.1, 1, 1,-0.1,-0.1,-1, -1, 1, 1, 1, 1, 0, 0, 0, 0, 0)
+ini <- c(0, 10, 10, 0, 1, 1, 0, 0, 0, 0, -1, -1, 0, 0, 1, 1, 1, 1)
 
-# 上でのパッケージでの推定値をかなり参照して決めた初期値
-iini<-c(12,12,0.06,3,3,-0.04 ,-0.4, -3,	-3,3,2, 3,3,0.01, -0.001,-0.013, 0.01,0.01)
-# 最適化
+
+# 最適化 Nealder-Meadでは初期値にかなり依存して推定されてしまうため(おそらくパラメタの多さによるもの)、BFGSを用いる。
 result_with_atr <- optimx( par = ini, 
                   fn = f_likelihood_logit_with_atr, 
-                  method="Nelder-Mead", 
+                  method="BFGS", 
                   data = data_for_estimation_with_atr, 
                   control = list(fnscale=-1), 
                   hessian = TRUE  )
 
 # 推定値の取得
-est_vec <- as.numeric(result_with_atr[1,1:18])
+ est_vec <- as.numeric(result_with_atr[1,1:18])
 
-result_with_atr_test <- optimx( par = iini, 
-                  fn = f_likelihood_logit_with_atr, 
-                  method="Nelder-Mead", 
-                  data = data_for_estimation_with_atr, 
-                  control = list(fnscale=-1), 
-                  hessian = TRUE  )
-
-est_vec_test <- as.numeric(result_with_atr_test[1,1:18])
 ```
-　推定された値は以下であるが、上述のパッケージによる推定値とはかけ離れているように見える。
+　推定された値は以下である。
 ```{r}
-# パッケージでの推定値とはかなり違う(ほぼ初期値のまま？)。パラメタの多さのせいかもしれない？
+# 推定されたパラメタ。
 
 print(est_vec)
 ```
+　mlogitパッケージによる推定値と比べると以下のようになっている。概ね近い値となっている。
 ```{r}
 # パッケージでの推定値:
-est_vec_pack <- c(12.521,12.661,0.063,3.363,3.529,-0.046 ,-0.429, -3.324,	-3.664,3.817,2.796, 3.365,3.390,0.013, -0.002,-0.018, 0.016, 0.013)
+est_vec_pack <- c(0.063, 12.521,12.661,0.013, 3.363,3.529, -0.002, -0.046 ,-0.429, -0.018, -3.324,	-3.664,0.016, 0.013, 3.817,2.796, 3.365,3.390 )
+# 比較 やや差があるが概ね同じ
 print(rbind(est_vec, est_vec_pack))
 ```
 
-　初期値をむりやり上での推定値と近い初期値にすると近い値にはなるものの、どちらかというと初期値への依存度合いが高いだけであるように見える。他の初期値を選んでも初期値と近い値が出やすい。パラメータが多く局所解にハマりやすくなっている可能性も考えられる。
-```{r}
-# むりやり推定値と近い初期値にすると多少近い値になるが、かなり初期値に依存していそう？
-print(est_vec_test)
-```
-```{r}
-print(rbind(est_vec_test,est_vec_pack))
-```
+　
 
-　それぞれの初期値での対数尤度は以下のようになっている。少なくとも、おおざっぱに選んだほうの初期値による推定では最適化がうまくいっていないことが見て取れる。
+　対数尤度で見ても概ね等しい。
 ```{r}
-# 念のため、対数尤度はそれぞれこのようになっている。
-print(result_with_atr[19])
-print(result_with_atr_test[19])
+# 対数尤度はそれぞれこのようになっている。
+print(result_with_atr[19]$value)
+ml_consumer_atr$logLik
 ```
-　一応、標準誤差の計算まで済ませておく。
+　標準誤差を算出する。
 ```{r}
 #　ヘシアンの計算
 Hessian <- gHgen(par = as.numeric(result_with_atr[1,1:18]), 
@@ -709,18 +692,123 @@ Hessian <- gHgen(par = as.numeric(result_with_atr[1,1:18]),
                  data = data_for_estimation_with_atr)
 se_vec <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
 ```
-
+　推定値と標準誤差を並べたものを以下に示す。
 ```{r}
 print(rbind(est_vec, se_vec))
+```
+
+## ランダム係数ロジット(消費者属性無し)
+　続いて、ランダム係数ロジットをスクラッチで推定する。まず、以下でドロー回数分の個人の選択確率を算出する。
+　
+```{r}
+
+f_rcdclogit_prob <- function(alpha_Kinoko, alpha_Takenoko, beta, price_Kinoko, price_Takenoko, sigma_Kinoko, sigma_Takenoko, sigma_price, tau){
+# きのこ、たけのこから得られるそれぞれの効用の算出
+# sigma_〇〇は各パラメタの標準偏差、tauは標準正規分布に従う乱数を(ドロー回数)行×3列発生させたもの
+  alpha_Kinoko_draw <- alpha_Kinoko + sigma_Kinoko*tau[, 1]
+  alpha_Takenoko_draw <- alpha_Takenoko + sigma_Takenoko*tau[, 2]
+  beta_draw <- beta + sigma_price*tau[, 3]
+  util_Kinoko <- alpha_Kinoko_draw - price_Kinoko*beta_draw
+  util_Takenoko <- alpha_Takenoko_draw - price_Takenoko*beta_draw
+# 選択確率の算出
+  prob_Kinoko <- exp( util_Kinoko ) / ( 1 + exp( util_Kinoko ) + exp( util_Takenoko ))
+  prob_Takenoko <- exp( util_Takenoko ) / ( 1 + exp( util_Kinoko ) + exp( util_Takenoko ))
+  prob_Other <- 1 - (prob_Kinoko + prob_Takenoko)
+
+  return( cbind(prob_Kinoko, prob_Takenoko, prob_Other))
+}
+```
+
+　方針:各回答者ごとの一連の選択の確率を1000ドローしたものを、平均して近似する。以下で対数尤度を算出する。
+```{r}
+f_likelihood_rcdclogit <- function(param, data, times_draw){
+  # 空のデータフレーム
+  pred <- data.frame(matrix(ncol = 3, nrow = 1180*times_draw))
+  colnames(pred) <- c("prob_Kinoko", "prob_Takenoko","prob_Other")
+  ID <- numeric(236*times_draw)
+  beta <- param[1]
+  alpha_Kinoko <- param[2]
+  alpha_Takenoko <- param[3]
+  sigma_price <- param[4]
+  sigma_Kinoko <- param[5]
+  sigma_Takenoko <- param[6]
+  
+  tau<- matrix(nrow = times_draw, ncol = 3)
+
+# 各回答者の選択確率を予測する
+  for(i in 1:236){
+  set.seed(500+i)
+  # 回答者iがドローする乱数
+  tau[, 1] <- rnorm(times_draw, mean = 0, sd = 1)
+  tau[, 2] <- rnorm(times_draw, mean = 0, sd = 1)
+  tau[, 3] <- rnorm(times_draw, mean = 0, sd = 1)
+# 各選択フェーズでのドロー回数分の選択確率を予測
+  P1 <- f_rcdclogit_prob(alpha_Kinoko, alpha_Takenoko, beta, 200, 200, sigma_Kinoko, sigma_Takenoko, sigma_price, tau)
+  P2 <- f_rcdclogit_prob(alpha_Kinoko, alpha_Takenoko, beta, 180, 200, sigma_Kinoko, sigma_Takenoko, sigma_price, tau)
+  P3 <- f_rcdclogit_prob(alpha_Kinoko, alpha_Takenoko, beta, 200, 170, sigma_Kinoko, sigma_Takenoko, sigma_price, tau)
+  P4 <- f_rcdclogit_prob(alpha_Kinoko, alpha_Takenoko, beta, 220, 200, sigma_Kinoko, sigma_Takenoko, sigma_price, tau)
+  P5 <- f_rcdclogit_prob(alpha_Kinoko, alpha_Takenoko, beta, 190, 210, sigma_Kinoko, sigma_Takenoko, sigma_price, tau)
+  # 各設問ごとのドロー回数分の選択確率を格納
+  pred[(5*(i-1)*(times_draw)+1):(5*(i-1)*(times_draw)+times_draw),] <- P1
+  pred[(5*(i-1)*(times_draw)+times_draw+1):(5*(i-1)*(times_draw)+2*times_draw),] <- P2
+  pred[(5*(i-1)*(times_draw)+2*times_draw+1):(5*(i-1)*(times_draw)+3*times_draw),] <- P3
+  pred[(5*(i-1)*(times_draw)+3*times_draw+1):(5*(i-1)*(times_draw)+4*times_draw),] <- P4
+  pred[(5*(i-1)*(times_draw)+4*times_draw+1):(5*(i-1)*(times_draw)+5*times_draw),] <- P5
+  # 各回答者の固有のIDをあらかじめ用意しておく。
+  ID[(5*(i-1)*(times_draw)+1):(5*(i-1)*(times_draw)+5*times_draw)] <- rep(data$ID[(5*(i-1)+1)], 5*times_draw)
+  
+  }
+  # IDと設問、ドローフェーズ(マージ用)
+  pred$ID<- ID
+  pred$occasion <- rep(rep(c("Q1", "Q2", "Q3", "Q4", "Q5"), each = times_draw), 236)
+  pred$draw_phase <- rep(c(1:times_draw), 5*236)
+  # 各選択フェーズに対する実際の選択と、予測された選択確率を対応させる
+  data %>%
+    left_join(pred, by = c("ID","occasion")) %>%
+    mutate( choice_prob = case_when( choice == 0 ~ prob_Other,
+                                     choice == 1 ~ prob_Kinoko,
+                                     choice == 2 ~ prob_Takenoko) ) %>%
+    group_by(ID, draw_phase) %>%　# 各回答者の設問1～5への選択の組み合わせが実現する確率を各ドローフェーズごとに算出。
+    summarise(joint_by_draw = prod(choice_prob),.groups = "drop") %>%
+    group_by(ID) %>% # 算出した確率を各回答者ごとに平均する。
+    summarise(mean_joint_prob=mean(joint_by_draw), .groups = "drop") %>%　
+    mutate(log_choice_joint_prob = log(mean_joint_prob)) %>%
+    select(log_choice_joint_prob) -> result
+
+
+    # 和を取って対数尤度を計算する
+  likelihood <- sum(result)
+
+   return(likelihood)
+
+}
+```
+```{r}
+# カンニングしてパッケージで推定されたパラメタを入れたら、対数尤度は同じくらいになった
+f_likelihood_rcdclogit( c(0.164, 35.194, 36.499, -0.031, 1.238, 4.294), data_for_estimation_with_atr, 50)
+```
+
+
+　推定を行う。
+```{r}
+
+ini_rcdc <- c(0.6,20,20,	0.1,1,1)
+result_rcdc <- optimx( par = ini_rcdc, 
+                  fn = f_likelihood_rcdclogit, 
+                  method="BFGS", 
+                  data = data_for_estimation_with_atr, 
+                  control = list(fnscale=-1), 
+                  hessian = TRUE,
+                  times_draw=1000)
+
+est_vec_rcdc <- result_rcdc[1:6]
+```
+　以下が推定されたパラメタである。価格の係数がパッケージによるものと異なる
+```{r}
+est_vec_rcdc
 ```
 
 
 
 
 
-
-
-
-
-
-　
